tests/NormalTests/paczka1/small_fuzzy/85337392.err
Error in line 5: A224 A224 68,8
Error in line 6: A224 S93 55,8
Error in line 7: A224 S131 24,3
Error in line 3: bJOyHttR6 A224 32,5
